objects/License_Request__c.object
<CustomObject>
    <fields>
        <fullName>AFR_Reference__c</fullName>
        <formula>&quot;Please do not delete this line refer:&quot; + CASESAFEID(Id) + &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AFR Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Emails__c</fullName>
        <label>Additional Email Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_MAC_ID_BC_DR__c</fullName>
        <label>Backup MAC ID BC DR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_MAC_ID_or_Host_ID__c</fullName>
        <label>Backup MAC ID/ Host ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Auto_Follow_Ups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Auto-Follow Ups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Calc__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_for_Email_Alerts__c</fullName>
        <label>Contact Email for Email Alerts</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Employer__c</fullName>
        <formula>Contact__r.Employer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Contact Match</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activation File Requests</relationshipLabel>
        <relationshipName>License_Request_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_for_Template__c</fullName>
        <formula>IF ( ISBLANK( Contact__c ),
First_Name__c + &apos; &apos; +  Last_Name__c, 
Contact__r.FirstName + &apos; &apos; +  Contact__r.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact for Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Email__c</fullName>
        <label>Submitted Corporate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_Needed__c</fullName>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reasoning__c</fullName>
        <label>Date Reasoning</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery Cold Standby</fullName>
                </value>
                <value>
                    <fullName>PPU</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery Hot Standby</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EU_Owner__c</fullName>
        <formula>End_User__r.Owner.FirstName + &quot; &quot; +
End_User__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <formula>End_User__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Confirmed End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activation File Requests</relationshipLabel>
        <relationshipName>License_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment_Type__c</fullName>
        <label>Environment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_of_the_Hosting_Contract__c</fullName>
        <label>Expiration Date of the Hosting Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Date__c</fullName>
        <label>Extension Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Expiration_Date__c</fullName>
        <description>Used to store expiration date for temporary licenses.</description>
        <inlineHelpText>Used to store expiration date for temporary licenses.</inlineHelpText>
        <label>File Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>Submitted First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GARN_Code__c</fullName>
        <inlineHelpText>End User Account GARN code</inlineHelpText>
        <label>Submitted GARN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gen_Care_Ops__c</fullName>
        <formula>End_User__r.Genesys_Care_Ops__r.FirstName + &quot; &quot; +
 End_User__r.Genesys_Care_Ops__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Genesys Care Ops</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gen_Care_Specialist__c</fullName>
        <formula>End_User__r.Genesys_Care_specialist__r.FirstName + &quot; &quot; + 
 End_User__r.Genesys_Care_specialist__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Genesys Care Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Configuration__c</fullName>
        <label>IVR Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Front</fullName>
                </value>
                <value>
                    <fullName>Behind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Submitted Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_File_Category__c</fullName>
        <label>Activation File Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Genesys Activation File</fullName>
                </value>
                <value>
                    <fullName>Third Party Activation File</fullName>
                </value>
                <value>
                    <fullName>Genesys Cloud Activation File</fullName>
                </value>
                <value>
                    <fullName>Pay Per Use/Hosted Activation File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_File_Type__c</fullName>
        <label>Activation File Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>License_File_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Deployment</fullName>
                </value>
                <value>
                    <fullName>Additional Lab Files</fullName>
                </value>
                <value>
                    <fullName>Expansion/Add-on to Original Deployment</fullName>
                </value>
                <value>
                    <fullName>Rehost</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Additional Test Files</fullName>
                </value>
                <value>
                    <fullName>Seat Reallocation</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Temporary File Extension</fullName>
                </value>
                <value>
                    <fullName>Genesys GIR and Speech Analytics</fullName>
                </value>
                <value>
                    <fullName>Voice Genie</fullName>
                </value>
                <value>
                    <fullName>Temporary File Extension Third Party</fullName>
                </value>
                <value>
                    <fullName>Third Party - Aria</fullName>
                </value>
                <value>
                    <fullName>Third Party - Business Objects/Interactive Insights</fullName>
                </value>
                <value>
                    <fullName>Third Party - Nuance</fullName>
                </value>
                <value>
                    <fullName>Third Party - Business Objects/Genesys Reporting</fullName>
                </value>
                <value>
                    <fullName>Third Party - Audio Codes</fullName>
                </value>
                <value>
                    <fullName>Third Party - Zoom</fullName>
                </value>
                <value>
                    <fullName>Third Party - VMware</fullName>
                </value>
                <value>
                    <fullName>Third Party - SilverLining</fullName>
                </value>
                <value>
                    <fullName>GCIP</fullName>
                </value>
                <value>
                    <fullName>Genesys</fullName>
                </value>
                <value>
                    <fullName>Aria</fullName>
                </value>
                <value>
                    <fullName>Zoom</fullName>
                </value>
                <value>
                    <fullName>Nuance</fullName>
                </value>
                <value>
                    <fullName>Audio Codes</fullName>
                </value>
                <value>
                    <fullName>VMware</fullName>
                </value>
                <value>
                    <fullName>SilverLining</fullName>
                </value>
                <value>
                    <fullName>Dialogic</fullName>
                </value>
                <value>
                    <fullName>Business Objects/Genesys Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Request_Type__c</fullName>
        <label>Implementation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Deployment</fullName>
                </value>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Reallocation</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Upgrade to GVP</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licensing_Analyst_Name__c</fullName>
        <formula>if(Sold_To__r.Country__r.Name=&quot;Russia&quot;,$Setup.Licensing_Analyst__c.Russia_Analyst_Name__c,
CASE ( End_User__r.Country__r.Name,
&quot;United States&quot;, $Setup.Licensing_Analyst__c.US_Analyst_Name__c,
&quot;Canada&quot;, $Setup.Licensing_Analyst__c.Canada_Analyst_Name__c,
&quot;Russia&quot;, $Setup.Licensing_Analyst__c.Russia_Analyst_Name__c,
CASE(End_User__r.Region__c,
&quot;APAC&quot;, $Setup.Licensing_Analyst__c.APAC_Analyst_Name__c,
&quot;EMEA&quot;, $Setup.Licensing_Analyst__c.EMEA_Analyst_Name__c,
&quot;LATAM&quot;, $Setup.Licensing_Analyst__c.LATAM_Analyst_Name__c,
&quot;North America&quot;, $Setup.Licensing_Analyst__c.North_America_Analyst_Name__c,
&quot;&quot;
))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensing Analyst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAC_ID_or_Host_ID__c</fullName>
        <label>MAC ID / Host ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_Estimated_Ports__c</fullName>
        <label>Max No.of Estimate Ports/Seats/Sessions</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_S__c</fullName>
        <label>O/S</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Solaris</fullName>
                </value>
                <value>
                    <fullName>AIX</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PBX_SIP__c</fullName>
        <label>PBX/SIP</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nortel</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Alcatel</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>SIP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Please_Clarify_Your_Request__c</fullName>
        <label>Please Clarify Your Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Port_Type__c</fullName>
        <label>Port Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_MAC_ID_BC_DR__c</fullName>
        <label>Primary MAC ID BC DR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_Department__c</fullName>
        <label>Referred Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Genesys Care</fullName>
                </value>
                <value>
                    <fullName>Order Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Partner Group</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>End_User__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Support Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_License_Requests__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Requests</label>
        <referenceTo>License_Request__c</referenceTo>
        <relationshipLabel>Related AFRs</relationshipLabel>
        <relationshipName>License_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Activation File Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_or_PO__c</fullName>
        <label>SO# or PO#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <label>Submitted Sold To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Confirmed Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>License_Request2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>used in the customer notification WF</description>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Awaiting Info</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Update Received</fullName>
                </value>
                <value>
                    <fullName>Genesys Care Consult</fullName>
                </value>
                <value>
                    <fullName>PM Consult</fullName>
                </value>
                <value>
                    <fullName>AE/SE Consult</fullName>
                </value>
                <value>
                    <fullName>Partner Consult</fullName>
                </value>
                <value>
                    <fullName>OM Consult</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Temp Exception Activation File</fullName>
                </value>
                <value>
                    <fullName>PPU Activation File</fullName>
                </value>
                <value>
                    <fullName>Perm Activation File</fullName>
                </value>
                <value>
                    <fullName>Eval Activation File</fullName>
                </value>
                <value>
                    <fullName>Migration Activation File</fullName>
                </value>
                <value>
                    <fullName>Third Party Activation File</fullName>
                </value>
                <value>
                    <fullName>Referred to Other Department</fullName>
                </value>
                <value>
                    <fullName>Duplicate Request</fullName>
                </value>
                <value>
                    <fullName>Contact Closure</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Info required from customer</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Linked</fullName>
                </value>
                <value>
                    <fullName>Partner Lab Activation File</fullName>
                </value>
                <value>
                    <fullName>Temp Exception to Permanent File</fullName>
                </value>
                <value>
                    <fullName>Maintenance Issues</fullName>
                </value>
                <value>
                    <fullName>Initial Assessment</fullName>
                    <isActive>false</isActive>
                    <label>Initial Assessment</label>
                </value>
                <value>
                    <fullName>Pre-Close</fullName>
                    <isActive>false</isActive>
                    <label>Pre-Close</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Contact_Phone__c</fullName>
        <label>Submitted Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Submitted_Employer__c</fullName>
        <label>Submitted Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_End_User__c</fullName>
        <label>Submitted End User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Activation_File_Type__c</fullName>
        <label>Third Party Activation File Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aria</fullName>
                </value>
                <value>
                    <fullName>Audio Codes</fullName>
                </value>
                <value>
                    <fullName>Business Objects-Interactive Insights</fullName>
                </value>
                <value>
                    <fullName>Business Objects-Genesys Reporting</fullName>
                </value>
                <value>
                    <fullName>GCIP</fullName>
                </value>
                <value>
                    <fullName>Nuance</fullName>
                </value>
                <value>
                    <fullName>SilverLining</fullName>
                </value>
                <value>
                    <fullName>Zoom</fullName>
                </value>
                <value>
                    <fullName>VMWare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent</label>
        <type>Checkbox</type>
    </fields>
    <label>Activation Request</label>
    <listViews>
        <fullName>Activation_File_Requests</fullName>
        <columns>NAME</columns>
        <columns>Urgent__c</columns>
        <columns>Corporate_Email__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Request_Type__c</columns>
        <columns>License_File_Category__c</columns>
        <columns>Submitted_End_User__c</columns>
        <columns>GARN_Code__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>License_Request__c.Editable,License_Request__c.Read_Only</value>
        </filters>
        <label>Activation File Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Request_Type__c</columns>
        <columns>License_File_Category__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>_All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unresolved_Emails_all</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Corporate_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>License_Request__c.Email_to_LicenseRequest</value>
        </filters>
        <label>Unresolved Emails - All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unresolved_Emails_open</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Corporate_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>License_Request__c.Email_to_LicenseRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Unresolved Emails - Open</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AFR-{0000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activation File Requests</pluralLabel>
    <recordTypes>
        <fullName>Editable</fullName>
        <active>true</active>
        <label>Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_to_LicenseRequest</fullName>
        <active>true</active>
        <label>Email to LicenseRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_Email_Domain</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.BypassValidationRules__c = FALSE,OR(CONTAINS(Corporate_Email__c  , &apos;gmail&apos;),CONTAINS(Corporate_Email__c  , &apos;hotmail&apos;),CONTAINS(Corporate_Email__c  , &apos;yahoo&apos;)))</errorConditionFormula>
        <errorDisplayField>Corporate_Email__c</errorDisplayField>
        <errorMessage>No Gmail, Hotmail, Yahoo account is accepted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_ExpirationDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT $User.BypassValidationRules__c, 
ISPICKVAL(Status__c,&apos;Closed&apos;),
OR(ISPICKVAL(Sub_Status__c,&apos;Temp Exception Activation File&apos;),ISPICKVAL(Sub_Status__c,&apos;PPU Activation File&apos;),ISPICKVAL(Sub_Status__c,&apos;Eval Activation File&apos;),ISPICKVAL(Sub_Status__c,&apos;Migration Activation File&apos;)),
 RecordType.DeveloperName != &apos;Email_to_LicenseRequest&apos;, 
ISBLANK(File_Expiration_Date__c))</errorConditionFormula>
        <errorDisplayField>File_Expiration_Date__c</errorDisplayField>
        <errorMessage>File Expiration Date required for this SubStatus</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lincense_File_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT $User.BypassValidationRules__c,
ISPICKVAL(Request_Type__c,&apos;Activation File Request&apos;),
ISPICKVAL( License_File_Type__c,&apos;&apos;),
 RecordType.DeveloperName != &apos;Email_to_LicenseRequest&apos;
)</errorConditionFormula>
        <errorDisplayField>License_File_Type__c</errorDisplayField>
        <errorMessage>Please select Activation File Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referred_to_Other_Dept</fullName>
        <active>true</active>
        <description>Closed, Referred to Other Department  The Referred Department field must be filled out</description>
        <errorConditionFormula>AND($User.BypassValidationRules__c = FALSE,
ISPICKVAL(Status__c, &apos;Closed&apos;),
ISPICKVAL(Sub_Status__c,&apos;Referred to Other Department&apos;),
ISPICKVAL(Referred_Department__c,&apos;&apos;),
 RecordType.DeveloperName != &apos;Email_to_LicenseRequest&apos;
)</errorConditionFormula>
        <errorDisplayField>Referred_Department__c</errorDisplayField>
        <errorMessage>Please specify Referred Department</errorMessage>
    </validationRules>
</CustomObject>